--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Pearly",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "^4.4.1",
     "grunt": "^1.0.4",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
@@ -21,7 +20,10 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-html": "^12.1.0",
+    "grunt-html": "^12.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
   }
